# cross-platform-rendering

./: CMakeLists.txt  main.cpp
